Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.1 (unreleased)

* Version 1.0 (released 2009-01-23)

** gsasl: New parameter --priority to specify GnuTLS priority strings.
Can be used to change TLS settings, which may be needed to talk to
some servers.

** gsasl: Print web page links in --help, per new GNU coding standard.

** tests: New self-test for the gsasl_client_suggest_mechanism function.

** doc: Modernize doxygen configuration.

** doc: Use permissive license for man pages.

** doc: Change license on the manual to GFDLv1.3+.

* Version 0.2.29 (released 2008-10-21)

** gsasl: Don't use poll with POLLOUT to avoid busy-waiting.
Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.

** doc: Error codes are now extracted using official library APIs.

** doc: Included cyclomatic code complexity charts of the library code.
See doc/cyclo/.

** tests: Add self test of obsolete base64 functions.

** Update gnulib files.
Improves Windows compatibility.

* Version 0.2.28 (released 2008-08-20)

** gsasl: Rewrite to use poll instead of select.
Will allow easier porting to Mingw32 in the future.

** doc: Improve Windows installation instructions in the manual.

** tests: New self test of gsasl_mechanism_name function.

* Version 0.2.27 (released 2008-07-01)

** Fix SASL operations through TLS.
Report and tiny patch from Enrico Scholz
<enrico.scholz@informatik.tu-chemnitz.de> in
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/149>.

** Update gnulib files, and include gnulib self-tests.

** Update translations.

* Version 0.2.26 (released 2008-05-05)

** Translations files not stored directly in git to avoid merge conflicts.