@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.1 (unreleased)
 
+** gsasl: The --quality-of-protection parameter now works.
+It was just a dummy before.  Only relevant for DIGEST-MD5.  Note that
+the parameter value have been modified to match the library keywords.
+
 * Version 1.0 (released 2009-01-23)
 
 ** gsasl: New parameter --priority to specify GnuTLS priority strings.
